# autodiff

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: coverage.yml  documentation.yaml  test.yml
docs/: .buildinfo  documentation.ipynb  milestone1.ipynb  milestone2.ipynb  milestone2_progress.md  modules.html  py-modindex.html  searchindex.js
docs/_sources/: autodiff.rst.txt  index.rst.txt  modules.rst.txt
docs/documentation/sphinx_docs/: conf.py
docs/documentation/sphinx_docs/_build/doctrees/: autodiff.doctree  environment.pickle  index.doctree  modules.doctree
docs/documentation/sphinx_docs/_build/html/: autodiff.html  genindex.html  index.html  objects.inv  search.html
docs/documentation/sphinx_docs/_build/latex/: automaticdifferentiation.tex
src/autodiff/: dualnumber.py  func.py  operators.py  rNode.py
test/: check_coverage.sh  coverage.xml  parser.py  run_tests.sh  test_dualnumber.py  test_func.py  test_operators.py  test_rNode.py
