[metadata]
name = autodiff-team31
version = 1.0.0
author = Team31
author_email = cyrusasgari@college.harvard.edu
description = Automatic differentiation package 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://code.harvard.edu/CS107/team31
classifiers = 
    Programming Language :: Python :: 3,
    License :: OSI Approved :: MIT License,
    Topic :: Software Development :: Testing

[options]
package_dir = 
    =src
packages = find:
install_requires = 
    python_version>="3.6"
    numpy
    graphviz

[options.packages.find]
where = src